[package]
name = "pine"
version = "0.4.2"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2018"

[workspace]
members = ["libarchive"]

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "2.33", features = ["wrap_help"] }
libarchive = { path = "./libarchive" }
lscolors = { version = "0.7", default-features = false }
termcolor = "1.1"
thiserror = "1.0"
walkdir = "2.3"
