[package]
name = "pine"
version = "0.6.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2021"

[workspace]
members = ["libarchive"]

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "3.2", features = ["cargo", "deprecated", "wrap_help"] }
libarchive = { path = "./libarchive" }
libc = "0.2"
lscolors = { version = "0.12", default-features = false }
termcolor = "1.1"
thiserror = "1.0"
walkdir = "2.3"
