[package]
name = "pine"
version = "0.7.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2021"

[workspace]
members = ["libarchive"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3", features = ["cargo", "deprecated", "wrap_help"] }
libarchive = { path = "./libarchive" }
libc = "0.2"
lscolors = { version = "0.20", default-features = false }
termcolor = "1.2"
thiserror = "2.0.11"
walkdir = "2.3"
